--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,10 @@ jobs:
   tests:
     runs-on: ubuntu-latest
 
+    services:
+      redis:
+        image: redis
+
     strategy:
       matrix:
         php: [5.6, 7.0, 7.1, 7.2, 7.3, 7.4]
