--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,10 @@
         }
     ],
     "minimum-stability": "RC",
-
     "require": {
         "php": ">=5.6.0 <8.0",
         "predis/predis": "^1.0",
-        "codeception/codeception": "4.0.x-dev | ^4.0"
+        "codeception/codeception": "^4.0"
     },
     "require-dev": {
         "codeception/util-robohelpers": "dev-master"
