--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,4 @@ jobs:
       run: composer install --prefer-dist --no-progress --no-interaction --no-suggest
 
     - name: Run test suite
-      run: php ./vendor/bin/codecept run
+      run: php vendor/bin/codecept run
