Code standards updated to PHP 7.1

--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,30 @@
 {
-    "name":"codeception/module-redis",
-    "description":"Redis module for Codeception",
-    "keywords":["codeception", "redis"],
-    "homepage":"http://codeception.com/",
-    "type":"library",
-    "license":"MIT",
-    "authors":[
-        {
-            "name":"Michael Bodnarchuk"
-        },
-        {
-            "name":"Dmitriy Maltsev"
-        }
-    ],
-    "minimum-stability": "RC",
-    "require": {
-        "php": ">=5.6.0 <9.0",
-        "predis/predis": "^1.0",
-        "codeception/codeception": "^4.0"
-    },
-    "autoload":{
-        "classmap": ["src/"]
-    },
-    "config": {
-        "classmap-authoritative": true
-    }
+	"name": "codeception/module-redis",
+	"description": "Redis module for Codeception",
+	"keywords": [ "codeception", "redis" ],
+	"homepage": "https://codeception.com/",
+	"type": "library",
+	"license": "MIT",
+	"authors": [
+		{
+			"name": "Michael Bodnarchuk"
+		},
+		{
+			"name": "Dmitriy Maltsev"
+		}
+	],
+	"minimum-stability": "RC",
+	"require": {
+		"php": "^7.1 || ^8.0",
+		"codeception/codeception": "^4.0",
+		"predis/predis": "^1.0"
+	},
+	"autoload": {
+		"classmap": [
+			"src/"
+		]
+	},
+	"config": {
+		"classmap-authoritative": true
+	}
 }
