--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 	],
 	"minimum-stability": "RC",
 	"require": {
-		"php": "^7.1 || ^8.0",
+		"php": "^7.4 || ^8.0",
 		"codeception/codeception": "^4.0",
 		"predis/predis": "^1.0"
 	},
@@ -26,5 +26,8 @@
 	},
 	"config": {
 		"classmap-authoritative": true
+	},
+	"require-dev": {
+		"codeception/stub": "^3.7"
 	}
 }
