--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 	"require": {
 		"php": "^7.4 || ^8.0",
 		"codeception/codeception": "^4.0",
-		"predis/predis": "^1.0"
+		"predis/predis": "^1.0",
+		"sebastian/comparator": "^4.0"
 	},
 	"autoload": {
 		"classmap": [
