--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
 	],
 	"minimum-stability": "RC",
 	"require": {
-		"php": "^7.4 || ^8.0",
-		"codeception/codeception": "^4.0",
-		"predis/predis": "^1.0",
+		"php": "^7.4 | ^8.0",
+		"codeception/codeception": "^4.1",
+		"predis/predis": "^1.1",
 		"sebastian/comparator": "^4.0"
 	},
 	"autoload": {
@@ -29,6 +29,6 @@
 		"classmap-authoritative": true
 	},
 	"require-dev": {
-		"codeception/stub": "^3.7"
+		"codeception/stub": "^4.0"
 	}
 }
