--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
 			"name": "Dmitriy Maltsev"
 		}
 	],
-	"minimum-stability": "RC",
+	"minimum-stability": "dev",
 	"require": {
-		"php": "^7.4 | ^8.0",
-		"codeception/codeception": "^4.1",
+		"php": "^8.0",
+		"codeception/codeception": "^5.0.0-alpha2",
 		"predis/predis": "^1.1",
-		"sebastian/comparator": "^4.0"
+		"sebastian/comparator": "^4.0 | ^5.0"
 	},
 	"autoload": {
 		"classmap": [
