--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 	"require": {
 		"php": "^8.0",
 		"codeception/codeception": "^5.0",
-		"predis/predis": "^1.1 | ^2.0",
+		"predis/predis": "^1.1 | ^2.0 | ^3.0",
 		"sebastian/comparator": "^4.0 | ^5.0 | ^6.0 | ^7.0"
 	},
 	"autoload": {
