--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,23 +20,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v6
 
-    - name: Setup PHP != 8.5
-      if: ${{ matrix.php != '8.5' }}
+    - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php }}
         coverage: none
-
-    - name: Setup PHP 8.5
-      if: ${{ matrix.php == '8.5' }}
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: ${{ matrix.php }}
-        coverage: none
-        # this ini directive seems to be off by default in PHP 8.5
-        # see https://github.com/php/php-src/issues/20279
-        # enable it because codeception relies on it.
-        ini-values: register_argc_argv=1
 
     - name: Validate composer.json and composer.lock
       run: composer validate
